--- a/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -217,7 +217,7 @@ WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSett
 WorldSettings=WorldSettings.WorldPartition.None,WorldSettings.GameMode.SelectedGameModeDetails,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Props
+ContentBrowserTab1.SelectedPaths=/Game
 ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -1154,8 +1154,6 @@ ExternalImagePicker.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/Parent/BP_BasePawn.BP_BasePawn
-OpenAssetsAtExit=/Game/Blueprints/Parent/BP_Sphere_Child.BP_Sphere_Child
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
