--- a/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -223,9 +223,10 @@ PreviewMeshCollection=
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,
 BlendSpace=BlendSpace.Axis Settings.Vertical Axis,BlendSpace.Axis Settings.Horizontal Axis,
 AimOffsetBlendSpace=AimOffsetBlendSpace.Axis Settings.Horizontal Axis,AimOffsetBlendSpace.Axis Settings.Vertical Axis,
+BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Animation/Poses
+ContentBrowserTab1.SelectedPaths=/Game/Animation
 ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -236,12 +237,12 @@ ContentBrowserTab1.CollectionAreaExpanded=False
 ContentBrowserTab1.FavoritesSearchAreaExpanded=False
 ContentBrowserTab1.PathSearchAreaExpanded=False
 ContentBrowserTab1.CollectionSearchAreaExpanded=False
-ContentBrowserTab1.VerticalSplitter.SlotSize0=0.150000006
-ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
+ContentBrowserTab1.VerticalSplitter.SlotSize0=0.331109226
+ContentBrowserTab1.VerticalSplitter.SlotSize1=0.568890631
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.ActiveTypeFilters=
+ContentBrowserTab1.ActiveTypeFilters=AnimMontage
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
@@ -287,7 +288,7 @@ SequenceBrowser.HiddenColumns=Class
 LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [ModuleFileTracking]
-MyProject.TimeStamp=2022.11.11-13.44.48
+MyProject.TimeStamp=2022.11.12-15.04.34
 MyProject.LastCompileMethod=External
 StorageServerClient.TimeStamp=2022.07.13-06.35.27
 StorageServerClient.LastCompileMethod=Unknown
@@ -1211,7 +1212,7 @@ CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Animation/ABP_MyTeacher.ABP_MyTeacher
 OpenAssetsAtExit=/Game/Blueprints/Character/BP_MyTeacher.BP_MyTeacher
-OpenAssetsAtExit=/Game/Animation/Poses/AO_MyTeacher.AO_MyTeacher
+OpenAssetsAtExit=/Game/Animation/Poses/RightTop.RightTop
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -2002,28 +2003,47 @@ AnimGraphNode_RotationOffsetBlendSpace.Sync=True
 AnimGraphNode_RotationOffsetBlendSpace.Relevancy=True
 AnimGraphNode_RotationOffsetBlendSpace.Coordinates=True
 AnimGraphNode_RotationOffsetBlendSpace.Settings=True
+AnimGraphNode_SaveCachedPose.GraphNodeDetail=True
+AnimGraphNode_SaveCachedPose.CachedPose=True
+AnimGraphNode_SaveCachedPose.Functions=True
+AnimGraphNode_SaveCachedPose.Tag=True
+AnimGraphNode_UseCachedPose.Functions=True
+AnimGraphNode_UseCachedPose.Tag=True
+AnimGraphNode_LayeredBoneBlend.Config=True
+AnimGraphNode_LayeredBoneBlend.Functions=True
+AnimGraphNode_LayeredBoneBlend.Runtime=True
+AnimGraphNode_LayeredBoneBlend.Tag=True
+AnimGraphNode_LayeredBoneBlend.Performance=True
+BoneProxy.Bone=True
+BoneProxy.Transforms=True
+AnimGraphNode_BlendListByBool.Runtime=True
+AnimGraphNode_BlendListByBool.Functions=True
+AnimGraphNode_BlendListByBool.Config=True
+AnimGraphNode_BlendListByBool.Tag=True
+AnimGraphNode_BlendListByBool.BlendType=True
+AnimGraphNode_BlendListByBool.Option=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Character/BP_MyTeacher
-MRUItem1=/Game/Animation/Poses/AO_MyTeacher
+MRUItem0=/Game/Animation/Poses/RightTop
+MRUItem1=/Game/Blueprints/Character/BP_MyTeacher
 MRUItem2=/Game/Animation/ABP_MyTeacher
-MRUItem3=/Game/Animation/Pointing__1__Montage
-MRUItem4=/Game/Animation/Pointing__2__Montage
-MRUItem5=/Game/Animation/Pointing__2_
-MRUItem6=/Game/Animation/Targeting
-MRUItem7=/Game/Animation/Targeting_Montage
-MRUItem8=/Game/Animation/Pointing
-MRUItem9=/Game/Props/Pointer/PointerPritotype
-MRUItem10=/Game/Props/Blackboard/1_Lousa_mtLousa_0
-MRUItem11=/Game/Animation/Pointing__1_
-MRUItem12=/Game/Animation/BS_Simple
-MRUItem13=/Game/Animation/Walk_Strafe_Right
-MRUItem14=/Game/Animation/Walking__1_
-MRUItem15=/Game/FirstPersonArms/Animations/FirstPerson_AnimBP
-MRUItem16=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem17=/Game/Blueprints/Parent/BP_Sphere_Child
-MRUItem18=/Game/Blueprints/Parent/BP_BasePawn
-MRUItem19=/Game/Blueprints/Pointer
+MRUItem3=/Game/Animation/Poses/AO_MyTeacher
+MRUItem4=/Game/Animation/UnTargeting
+MRUItem5=/Game/Animation/Targeting_Montage
+MRUItem6=/Game/Animation/Pointing__2__Montage
+MRUItem7=/Game/Animation/Idle
+MRUItem8=/Game/Animation/Pointing__1__Montage
+MRUItem9=/Game/Animation/Pointing__2_
+MRUItem10=/Game/Animation/Targeting
+MRUItem11=/Game/Animation/Pointing
+MRUItem12=/Game/Props/Pointer/PointerPritotype
+MRUItem13=/Game/Props/Blackboard/1_Lousa_mtLousa_0
+MRUItem14=/Game/Animation/Pointing__1_
+MRUItem15=/Game/Animation/BS_Simple
+MRUItem16=/Game/Animation/Walk_Strafe_Right
+MRUItem17=/Game/Animation/Walking__1_
+MRUItem18=/Game/FirstPersonArms/Animations/FirstPerson_AnimBP
+MRUItem19=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2273,7 +2293,7 @@ LODInfoUILayout="\"Object\" "
 SkeletalMeshSocket="\"Object\" "
 AnimSequence="\"Object\" \"Object.ImportSettings.AssetImportData.Object.ImportSettings.MaterialCurveSuffixes\" "
 AnimSequenceBase="\"Object\" \"Object.ImportSettings.AssetImportData.Object.ImportSettings.MaterialCurveSuffixes\" "
-AnimationAsset="\"Object\" "
+AnimationAsset="\"Object\" \"Object.ImportSettings.AssetImportData.Object.ImportSettings.MaterialCurveSuffixes\" "
 BlendSpace1D="\"Object\" "
 BlendSpace="\"Object\" "
 ABP_MyTeacher_C="\"Object\" "
@@ -2305,6 +2325,11 @@ AnimGraphNode_Fabrik="\"Object\" "
 AnimGraphNode_SkeletalControlBase="\"Object\" "
 AimOffsetBlendSpace="\"Object\" "
 AnimGraphNode_RotationOffsetBlendSpace="\"Object\" "
+AnimGraphNode_SaveCachedPose="\"Object\" "
+AnimGraphNode_UseCachedPose="\"Object\" "
+AnimGraphNode_LayeredBoneBlend="\"Object\" \"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
+AnimGraphNode_BlendListBase="\"Object\" "
+AnimGraphNode_BlendListByBool="\"Object\" "
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
@@ -2345,6 +2370,7 @@ RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraAc
 /Game/Animation/Pointing__2_.Pointing__2_=1
 /Game/Animation/Pointing__1__Montage.Pointing__1__Montage=1
 /Game/Animation/Poses/AO_MyTeacher.AO_MyTeacher=0
+/Game/Animation/Poses/RightTop.RightTop=0
 
 [PluginBrowser]
 InstalledPlugins=GLTFExporter
@@ -2431,7 +2457,7 @@ bAlwaysOpenAnimationAssetsInNewTab=False
 bMuteAudio=False
 bUseAudioAttenuation=True
 DefaultLocalAxesSelection=2
-DefaultBoneDrawSelection=1
+DefaultBoneDrawSelection=5
 SectionTimingNodeColor=(R=0.390000,G=0.390000,B=1.000000,A=0.750000)
 NotifyTimingNodeColor=(R=0.800000,G=0.100000,B=0.100000,A=1.000000)
 BranchingPointTimingNodeColor=(R=0.500000,G=1.000000,B=1.000000,A=1.000000)
